# this is the rust manifest file. Different to the config file
[package]
name = "rust_levelup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/learning_rust",
]

[dependencies]
log = "0.4"
env_logger = "0.10.1"
learning_rust = { path = "crates/learning_rust" }
