# this is the rust manifest file. Different to the config file
[package]
name = "rust_levelup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/learning_rust",
    "crates/async_objects",
    "crates/data_structures",
    "crates/rust_kata_exercises",
    "crates/following_rust_tutorial"
]

[dependencies]
log = "0.4"
env_logger = "0.10.1"
futures = "0.3.29"
learning_rust = { path = "crates/learning_rust" }
async_objects = { path = "crates/async_objects" }
data_structures = { path = "crates/data_structures" }
tokio = { version = "1", features = ["full"] } # this is quite large and only needed for the async_objects crate
polars = {version = "0.34.2", features = ["lazy", "parquet"]}
